Made Name Clickable To Go Home
Name in header is now clickable to bring you back home (work)

--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
 
     <header>
       <div>
-        <p id="logo">NEWTON NGUYEN-LE</p>
+        <a href="work.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
           <a href="work.html">WORK</a>
-          <a href="about.html">ABOUT</a>
+          <a href="about.html" class="active-nav">ABOUT</a>
         </nav>
       </div>
     </header>
