--- a/work.html
+++ b/work.html
@@ -13,11 +13,11 @@
 
     <header>
       <div>
-        <p id="logo">NEWTON NGUYEN-LE</p>
+        <a href="work.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
-          <a href="work.html">WORK</a>
+          <a href="work.html" class="active-nav">WORK</a>
           <a href="about.html">ABOUT</a>
         </nav>
       </div>
