Create all pages and made basic layouts
Created all portfolio pages and made the basic layouts. Home page and about page are fully constructed and responsive.

--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newton Nguyen-Le, Designer & Photographer</title>
-    <link href="css/main.css" rel="stylesheet">
+    <title>Newton Nguyen-Le | About</title>
+    <!-- <link href="css/main-black.css" rel="stylesheet"> -->
+    <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -24,20 +25,42 @@
     </header>
 
     <div class="container">
-      <div class="landing-head">
-        <h1>NEWTON <br> NGUYEN-LE</h1>
+      <div class="about-text">
+        <p>I am Newton Nguyen-Le, a photographer and design student in
+          Vancouver, BC. I am currently studying at the School of Interactive
+          Art & Technology at Simon Fraser University.
+          <br><br>
+          Through my passion for photography and design, I can express my
+          creative side and share my experiences with the world.
+          <br><br>
+          My photography seeks to capture the different qualities and personalities
+          of a person and all the beautiful and memorable experiences I encounter
+          in life. As a design student, I aim to create work the will
+          visually enhance other's experiences. I am interested in work that
+          allows me to share my experiences to further grow as a person and
+          as an artist.</p>
       </div>
 
-      <p>A photographer and design student in Vancouver, BC. He's currently
-        studying at the School of Interactive Art + Technology at Simon Fraser
-        University. Through my passion for photography and design I am able to
-        express my creative side and share my adventures with the world. </p>
+      <div class="about-text">
+        <h3>education</h3>
+        <hr>
+        <p class="about-other">Simon Fraser University<br>School of Interactive
+          Arts & Technology (B.A.)</p>
+        <br>
+        <h3>contact</h3>
+        <hr>
+        <p class="about-other">nnguyenl@sfu.ca</p>
+      </div>
     </div>
 
 
     <footer>
       <div class="footer-section">
-        <p>nnguyenl@sfu.ca</p>
+        <a href="style-guide.html" class="style-link">STYLE GUIDE</a>
+      </div>
+
+      <div class="footer-section">
+        <a href="citation.html" class="citation-link">CITATIONS</a>
       </div>
     </footer>
 
