--- a/style-guide.html
+++ b/style-guide.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio - Style Guide</title>
-    <link href="css/guide.css" rel="stylesheet">
+    <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -23,49 +23,58 @@
       </div>
     </header>
 
-  <!-- IN-TEXT LINK SECTION // -->
-    <h2>In-text link</h2>
-    <section class="element">
-      <a id="text-link" href="work.html">CLICK</a> TO CHECK OUT MY WORK
+    <!-- IN-TEXT LINK SECTION // -->
+    <section class="element-guide">
+      <h2>In-text link</h2>
+      <hr>
+      <br>
+      <a href="work.html">CLICK</a> TO CHECK OUT MY WORK
     </section>
 
-  <!-- NAV SECTION // -->
-    <h2>Navigation Links</h2>
-    <section class="element">
+    <!-- NAV SECTION // -->
+    <section class="element-guide">
+      <h2>Navigation Links & Main Navigation</h2>
+      <hr>
+      <br>
       <nav class="nav-guide">
         <a href="work.html">WORK</a>
         <a href="about.html">ABOUT</a>
       </nav>
     </section>
 
-    <!-- NAV SECTION // -->
-    <h2>Buttons</h2>
-    <section class="element">
-      <!-- Resource: https://www.w3schools.com/tags/att_button_type.asp -->
-      <button class="button" type="submit" value="Submit">BACK</button>
-      <button class="button" type="reset" value="Reset">NEXT</button>
+    <!-- IMAGE LINK SECTION // -->
+    <section class="element-guide">
+      <h2>Case Studies & Image as a Link</h2>
+      <hr>
+      <br>
+      <a href="proj-1.html"> <img src="img/proj-1.png" alt="Project 1" class="proj-display" id="guide-img"></a>
     </section>
 
-    <!-- IMAGE LINK SECTION // -->
-    <h2>Image as a Link</h2>
-    <section class="element">
-      <a href="proj1.html"> <img src="img/proj-1-2.png" alt="Project 1: Monogram" width="200"></a>
-    </section>
 
     <!-- HEADINGS SECTION // -->
-
-    <h2>Headings</h2>
-    <section class="element">
+    <section class="element-guide">
+      <h2>Text Elements</h2>
+      <hr>
+      <br>
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
       <h3>Heading 3</h3>
       <h4>Heading 4</h4>
+
+      <p>Paragraph: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum</p>
     </section>
 
     <!-- BRANDING SECTION // -->
-
-    <h2>Branding</h2>
-    <section class="element">
+    <section class="element-guide">
+      <h2>Branding</h2>
+      <hr>
+      <br>
       <p>Colour palette, Fonts & Artboard:</p>
       <br>
       <img src="img/colours.png" alt="Colours" width="400">
@@ -74,11 +83,6 @@
     <footer>
       <div class="footer-section">
         <p>nnguyenl@sfu.ca</p>
-      </div>
-
-      <div class="footer-section">
-        <p><a href="citation.html" class="citation-link">CITATIONS</a></p>
-        <p><a href="style-guide.html" class="citation-link">STYLE GUIDE</a></p>
       </div>
     </footer>
 
