--- a/work.html
+++ b/work.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Newton Nguyen-Le, Designer & Photographer</title>
-    <link href="css/main.css" rel="stylesheet">
+    <!-- black theme:  -->
+    <!-- <link href="css/main-black.css" rel="stylesheet">  -->
+    <!-- white theme:  -->
+    <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -23,29 +26,32 @@
       </div>
     </header>
 
-    <div class="container">
-      <div class="landing-head">
-        <h1>NEWTON <br> NGUYEN-LE</h1>
-      </div>
+    <div class="landing-head">
+      <h1 class="head-logo">NEWTON <br> NGUYEN-LE</h1>
+      <p class="sub-logo"> visual design + photography <p>
     </div>
 
     <div class=section>
       <div class="proj-container">
-        <a href=""> <img src="img/proj-1.png" alt="Project 1 - Centre A" id="proj-img"> </a>
-        <div class="project-name">centre a</div>
-        <div class="project-type">interaction design</div>
+        <a href="proj-1.html"> <img src="img/proj-1.png" alt="Project 1 - Centre A" class="proj-display"> </a>
+        <div class="project-name">self and place</div>
+        <div class="project-type">digital photography</div>
       </div>
 
       <div class="proj-container">
-        <a href=""> <img src="img/proj-1.png" alt="Project 2 - Monogram" id="proj-img"> </a>
+        <a href="proj-2.html"> <img src="img/proj-1.png" alt="Project 2 - Monogram" class="proj-display"> </a>
         <div class="project-name">monogram</div>
-        <div class="project-type">publishing design</div>
+        <div class="project-type">publishing graphic design</div>
       </div>
     </div>
 
     <footer>
       <div class="footer-section">
-        <p>nnguyenl@sfu.ca</p>
+        <a href="style-guide.html" class="style-link">STYLE GUIDE</a>
+      </div>
+
+      <div class="footer-section">
+        <a href="citation.html" class="citation-link">CITATIONS</a>
       </div>
     </footer>
 
