Fixed nav for black/white theme
fixing all colour elements and responsiveness to properly display based on the current theme

--- a/proj-1.html
+++ b/proj-1.html
@@ -28,19 +28,19 @@
       <div class="proj-box">
         <div class="proj-heading">
           <h1 class="proj-title">self & place</h1>
-          <!-- <p class="proj-subtitle">Private vs Public Self</p> -->
-          <p class="proj-detail">4-week long digital photography project / Digital Image Design</p>
+          <p class="proj-subtitle">Private vs Public Self</p>
+          <p class="proj-detail">4-week long digital photography project / digital image design</p>
         </div>
 
         <div class="proj-finalimg">
           <div class="proj-imgbox">
-            <img src="img/SelfPlace_1.jpg" alt="Project 1" class="proj-img">
-            <p>Private Self</p>
+            <img src="img/SelfPlace_1.png" alt="Project 1" class="proj-img">
+            <p><i>Private Self</i></p>
           </div>
 
           <div class="proj-imgbox">
-            <img src="img/SelfPlace_2.jpg" alt="Project 1" class="proj-img">
-            <p>Public Self</p>
+            <img src="img/SelfPlace_2.png" alt="Project 1" class="proj-img">
+            <p><i>Public Self</i></p>
           </div>
         </div>
 
