--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <!-- black theme:  -->
     <!-- <link href="css/main-black.css" rel="stylesheet">  -->
     <!-- white theme:  -->
-    <link href="css/main-white.css" rel="stylesheet">
+    <link href="css/main-black.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -16,7 +16,7 @@
 
     <header>
       <div>
-        <a href="work.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
+        <a href="work.html" id="logo-link"> <p id="logo-home">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="proj-container">
-        <a href="proj-2.html"> <img src="img/proj-1.png" alt="Project 2 - Monogram" class="proj-display"> </a>
+        <a href="proj-2.html"> <img src="img/proj-2.png" alt="Project 2 - Monogram" class="proj-display"> </a>
         <div class="project-name">monogram</div>
         <div class="project-type">publishing graphic design</div>
       </div>
