--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Newton Nguyen-Le | About</title>
     <!-- <link href="css/main-black.css" rel="stylesheet"> -->
-    <link href="css/main-white.css" rel="stylesheet">
+    <link href="css/main-black.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -14,7 +14,7 @@
 
     <header>
       <div>
-        <a href="work.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
+        <a href="work.html" id="logo-link"> <p id="logo-about">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
