Finished First Project Page
Added all texts and photos into the first project page and made everything responsive.

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="about-container">
       <div class="about-text">
         <p>I am Newton Nguyen-Le, a photographer and design student in
           Vancouver, BC. I am currently studying at the School of Interactive
@@ -35,7 +35,7 @@
           <br><br>
           My photography seeks to capture the different qualities and personalities
           of a person and all the beautiful and memorable experiences I encounter
-          in life. As a design student, I aim to create work the will
+          in life. As a design student, I aim to create work that will
           visually enhance other's experiences. I am interested in work that
           allows me to share my experiences to further grow as a person and
           as an artist.</p>
