--- a/style-guide.html
+++ b/style-guide.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio - Style Guide</title>
-    <link href="css/main-white.css" rel="stylesheet">
+    <link href="css/main-black.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
 
@@ -13,7 +13,7 @@
 
     <header>
       <div>
-        <p id="logo">P01 - STYLE GUIDE</p>
+        <p id="logo-style">P01 - STYLE GUIDE</p>
       </div>
       <div>
         <nav>
@@ -29,6 +29,16 @@
       <hr>
       <br>
       <a href="work.html">CLICK</a> TO CHECK OUT MY WORK
+    </section>
+
+    <!-- BUTTONS SECTION // -->
+    <section class="element-guide">
+      <h2>In-text link</h2>
+      <hr>
+      <br>
+      <form action="proj-2.html">
+        <button class="button-product">Next Project: <b>Book Covers<b></button>
+      </form>
     </section>
 
     <!-- NAV SECTION // -->
