Fixed Footer And Added Citations Page
added GITHUB to the footer on all pages and created a page for the citations

--- a/proj-1.html
+++ b/proj-1.html
@@ -199,6 +199,10 @@
       <div class="footer-section">
         <a href="citation.html" class="citation-link">CITATIONS</a>
       </div>
+
+      <div class="footer-section">
+        <a href="https://github.com/nnguyenl/portfolio.git" class="citation-link">GITHUB</a>
+      </div>
     </footer>
 
   </body>
