--- a/style-guide.html
+++ b/style-guide.html
@@ -92,7 +92,15 @@
 
     <footer>
       <div class="footer-section">
+        <a href="citation.html" class="citation-link">CITATIONS</a>
+      </div>
+      
+      <div class="footer-section">
         <p>nnguyenl@sfu.ca</p>
+      </div>
+
+      <div class="footer-section">
+        <a href="https://github.com/nnguyenl/portfolio.git" class="citation-link">GITHUB</a>
       </div>
     </footer>
 
