--- a/work.html
+++ b/work.html
@@ -54,7 +54,9 @@
         <a href="citation.html" class="citation-link">CITATIONS</a>
       </div>
 
-      
+      <div class="footer-section">
+        <a href="https://github.com/nnguyenl/portfolio.git" class="citation-link">GITHUB</a>
+      </div>
     </footer>
 
   </body>
