--- a/about.html
+++ b/about.html
@@ -62,6 +62,10 @@
       <div class="footer-section">
         <a href="citation.html" class="citation-link">CITATIONS</a>
       </div>
+
+      <div class="footer-section">
+        <a href="https://github.com/nnguyenl/portfolio.git" class="citation-link">GITHUB</a>
+      </div>
     </footer>
 
   </body>
