Created Citation Page & Added Button Into Style Guide
created layout and added content into the citation page. Added button element into style guide.

--- a/style-guide.html
+++ b/style-guide.html
@@ -33,7 +33,7 @@
 
     <!-- BUTTONS SECTION // -->
     <section class="element-guide">
-      <h2>In-text link</h2>
+      <h2>Buttons</h2>
       <hr>
       <br>
       <form action="proj-2.html">
@@ -71,7 +71,7 @@
       <h3>Heading 3</h3>
       <h4>Heading 4</h4>
 
-      <p>Paragraph: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+      <p>Paragraph: <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
         enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
@@ -80,23 +80,9 @@
         mollit anim id est laborum</p>
     </section>
 
-    <!-- BRANDING SECTION // -->
-    <section class="element-guide">
-      <h2>Branding</h2>
-      <hr>
-      <br>
-      <p>Colour palette, Fonts & Artboard:</p>
-      <br>
-      <img src="img/colours.png" alt="Colours" width="400">
-    </section>
-
     <footer>
       <div class="footer-section">
         <a href="citation.html" class="citation-link">CITATIONS</a>
-      </div>
-      
-      <div class="footer-section">
-        <p>nnguyenl@sfu.ca</p>
       </div>
 
       <div class="footer-section">
