Basic Layout Of Proj 2
copied the layout of project 1 into the project 2 page to begin adding in content

--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 
       <div class="proj-container">
         <a href="proj-2.html"> <img src="img/proj-2.png" alt="Project 2 - Monogram" class="proj-display"> </a>
-        <div class="project-name">monogram</div>
+        <div class="project-name">beloved</div>
         <div class="project-type">publishing graphic design</div>
       </div>
     </div>
