--- a/proj-2.html
+++ b/proj-2.html
@@ -27,19 +27,169 @@
     <div class="container">
       <div class="proj-box">
         <div class="proj-heading">
-          <h1 class="proj-title">Monogram</h1>
+          <h1 class="proj-title">beloved</h1>
           <p class="proj-subtitle">A drama short film about a teenage girl
             struggling to confront her reality after a recent traumatic
             experience at a high school party.</p>
           <p class="proj-detail">6-week long video production / New Media Images</p>
         </div>
 
-        <div>
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/z0S2lEmwGYk?controls=0"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe> -->
+        <div class="proj-finalimg">
+          <div class="proj-imgbox">
+            <img src="img/SelfPlace_1.png" alt="Project 1 - Private Self" class="proj-img">
+            <p><i>Private Self</i></p>
+          </div>
 
+          <div class="proj-imgbox">
+            <img src="img/SelfPlace_2.png" alt="Project 1 - Public Self" class="proj-img">
+            <p><i>Public Self</i></p>
+          </div>
         </div>
+
+        <div class="container">
+          <div class="proj-content">
+            <div class="text">
+              <br>
+              <h2>A Still Life photograph communicates more than what we can see.
+                The objects that we bring to a photograph and our surroundings
+                (environment, setting & time) will ultimately contribute to
+                communicate our individual experiences.</h2>
+            </div>
+
+            <div class="text">
+              <h1>Self & Place</h1>
+              <p>The purpose of this project is to use photographs to digitally
+                represent yourself based on your chosen topic. My concept for this
+                project is to show two contrasting photo that represents my
+                “private self”, the person not everyone sees and my “public self”,
+                what everyone else sees me like on social media (instagram).</p>
+            </div>
+
+            <div class="text">
+              <h3>Concept</h3>
+              <p>The first photo is my private self. I planned to take this picture
+                in a more quiet environment to represent mystery/privacy. I decided
+                to take this picture standing in between an aisle in a public
+                library while holding my laptop in front of me. By standing behind
+                the laptop screen it represents my true self, the real person behind
+                my social media self. I found an aisle with empty shelves on both
+                sides and thought it would be best to represent loneliness/privacy
+                since it’s empty. I also gave the photo a low saturation to bring
+                out the greys and blacks since those colours represents mystery and
+                security. The photo was shot with me standing in the middle. The
+                lines from the selves lead the eye towards the centre where I was
+                standing. It was also shot at eye point of view giving it more of
+                a reality feel. My private self isn’t perfect as it looks through
+                my social media its the reality, it isn’t as simple as it may seem
+                online. It’s all the good and the bad something not everyone gets
+                to see. No one would ever be able to tell who I really was just
+                looking at my online persona and I decided to represent this by
+                showing myself as the main subject behind a computer screen.
+              <br><br>
+  	             My contrasting photo, however, represents my social media self,
+                 which is only the good and fun aspects in my life. I portrayed
+                 this by going into a more urban/public setting. Since this photo
+                 only represents the fun stuff people see through my social media
+                 life, I decided to add wings to my back. The wings represent the
+                 online persona I’ve created for myself, it also makes it more of
+                 a imaginary not reality since everything portrayed on social
+                 media isn’t always as it seems. In the photo I’m positioned more
+                 towards the left with my head looking back. This photo was shot
+                 at a low point of view to make me seem more powerful and in
+                 control which is the power that social media lets a person have.
+                 I decided to removed the buildings behind me so it would seem
+                 like I was looking towards the empty white sky, something
+                 unknown/imaginary . The tones for this photo is light so I used
+                 the colours blue and white since they represent power, creation
+                 and simple.</p>
+            </div>
+
+            <div class="text">
+              <h3>Process</h3>
+              <h4>brainstorming</h4>
+
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/SP-1.png" alt="brainstorming" class="proj-imgprocess">
+                </div>
+
+                <div class="proj-imgbox">
+                  <img src="img/SP-2.png" alt="draft photos" class="proj-imgprocess">
+                </div>
+              </div>
+
+              <p>I started out by creating two mind maps to draught down ideas
+                for my photos. The first mind map is for my private self and the second
+                map is for my public self. Then I took these ideas and went out with a
+                friend to take some experimenting shots. After taking the experimenting
+                shots, I went home and looked over them. I tried to create a concept
+                using the photos I had and explored the ideas that I had in mind.
+                <br><br>
+                For the first photo I wanted to keep the idea of me being behind
+                the computer screen to show my true private self and for the second
+                photo I decided I to be in an urban area and add a photo of my
+                hand holding a pencil to make it look like I’m drawing a picture
+                of myself which would represents how my public social media self
+                is a person I’ve created not my true self.</p>
+            </div>
+
+            <div class="text">
+              <h4>photo selection</h4>
+
+                <div class="proj-imgprocess">
+                  <div class="proj-imgbox">
+                    <img src="img/SP-3.png" alt="brainstorming" class="proj-imgprocess">
+                  </div>
+
+                  <div class="proj-imgbox">
+                    <img src="img/SP-4.png" alt="draft photos" class="proj-imgprocess">
+                  </div>
+                </div>
+
+                <p>After retaking all my photos I narrowed it down to the final
+                  photos that would best represent my idea. From there, I started to
+                  individually edit the photos starting with the "private self" photo.
+                  <br><br>
+                  For the first photo, I went into image adjustment and used the
+                  hue/saturation settings to lower the saturation down by -50. Next,
+                  I used the quick selection tool to select the background of
+                  the photo to adjust the brightness and contrast. From there, I select
+                  the light on the ceiling and darken it with the lightness adjustment
+                  in hue/saturation settings.
+                  <br><br>
+                  For the second photo, after opening the original photo in photoshop,
+                  I imported the picture of the seagull and used the quick selection
+                  tool to crop the bird. Then using the quick selection tool again
+                  I selected only the wings/body of the bird. I copied and pasted
+                  the wings to make a total of 4. Using the transformation tool
+                  I began to enlarge and shape the wings to my liking and then
+                  repeated the process for the rest of the wings. After placing
+                  the group of wings behind my back, I used the quick selection
+                  tool once again to select my whole body and the wings. Then I
+                  copied and paste it onto a new layer that I’ve created, from
+                  there I was able to use the cloning tool to photoshop out the
+                  buildings behind me from the original photo. Finally I selected
+                  the background layer and used the hue/saturation tool in image
+                  adjustment to increase the saturation and turn up the lightness.
+                </p>
+            </div>
+
+            <div class="text">
+              <h3>conclusion</h3>
+              <p>The outcome of this digital image design project was excellent, the
+                photos come out as I planned in both the print and digital version.
+                Even though the outcome of this was great, I believe the photos can
+                still be further refined to produce an even better result especially
+                the wings in the second photo.
+                </p>
+            </div>
+          </div>
+        </div>
+
+        <form action="proj-2.html">
+          <button class="button-product">Next Project: <b>Book Covers</b></button>
+        </form>
+
       </div>
     </div>
 
