Fixed Citation & Added Image for Proj 2
Added a banner image for project 2 and fixed citation page spelling

--- a/citation.html
+++ b/citation.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="proj-box">
         <div class="proj-heading">
-          <h1 class="proj-title">citaions</h1>
+          <h1 class="proj-title">citations</h1>
           <p class="proj-subtitle">all references used</p>
           <p class="proj-detail">final portfolio project / iat 339 </p>
         </div>
@@ -38,6 +38,8 @@
       <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav
         <br> https://www.w3schools.com/css/css_positioning.asp
         <br> https://www.w3schools.com/css/css3_flexbox.asp
+        <br> https://www.w3schools.com/cssref/css3_pr_filter.asp
+        <br> https://www.w3schools.com/howto/howto_css_zoom_hover.asp
         <br><br> ALL IMAGES & TEXT FROM MYSELF, NEWTON NGUYEN-LE</p>
     </div>
 
