--- a/proj-1.html
+++ b/proj-1.html
@@ -56,6 +56,7 @@
 
             <div class="text">
               <h1>Self & Place</h1>
+              <h3>project description</h3>
               <p>The purpose of this project is to use photographs to digitally
                 represent yourself based on your chosen topic. My concept for this
                 project is to show two contrasting photo that represents my
@@ -64,7 +65,7 @@
             </div>
 
             <div class="text">
-              <h3>Concept</h3>
+              <h1>Concept</h1>
               <p>The first photo is my private self. I planned to take this picture
                 in a more quiet environment to represent mystery/privacy. I decided
                 to take this picture standing in between an aisle in a public
@@ -103,8 +104,8 @@
             </div>
 
             <div class="text">
-              <h3>Process</h3>
-              <h4>brainstorming</h4>
+              <h1>Process</h1>
+              <h3>brainstorming</h3>
 
               <div class="proj-imgprocess">
                 <div class="proj-imgbox">
@@ -132,7 +133,7 @@
             </div>
 
             <div class="text">
-              <h4>photo selection</h4>
+              <h3>photo selection</h3>
 
                 <div class="proj-imgprocess">
                   <div class="proj-imgbox">
@@ -173,7 +174,7 @@
             </div>
 
             <div class="text">
-              <h3>conclusion</h3>
+              <h1>conclusion</h1>
               <p>The outcome of this digital image design project was excellent, the
                 photos come out as I planned in both the print and digital version.
                 Even though the outcome of this was great, I believe the photos can
