--- a/proj-2.html
+++ b/proj-2.html
@@ -28,21 +28,14 @@
       <div class="proj-box">
         <div class="proj-heading">
           <h1 class="proj-title">beloved</h1>
-          <p class="proj-subtitle">A drama short film about a teenage girl
-            struggling to confront her reality after a recent traumatic
-            experience at a high school party.</p>
-          <p class="proj-detail">6-week long video production / New Media Images</p>
+          <p class="proj-subtitle">A novel written by Toni Morrison</p>
+          <p class="proj-detail">3-in-1 book cover project / Graphic Design in Transition: Print and Digital Books</p>
         </div>
 
         <div class="proj-finalimg">
           <div class="proj-imgbox">
-            <img src="img/SelfPlace_1.png" alt="Project 1 - Private Self" class="proj-img">
-            <p><i>Private Self</i></p>
-          </div>
-
-          <div class="proj-imgbox">
-            <img src="img/SelfPlace_2.png" alt="Project 1 - Public Self" class="proj-img">
-            <p><i>Public Self</i></p>
+            <img src="img/Beloved-1.png" alt="Project 1 - Private Self" class="proj-img">
+            <p><i>3-in-1 book covers</i></p>
           </div>
         </div>
 
@@ -50,63 +43,72 @@
           <div class="proj-content">
             <div class="text">
               <br>
-              <h2>A Still Life photograph communicates more than what we can see.
-                The objects that we bring to a photograph and our surroundings
-                (environment, setting & time) will ultimately contribute to
-                communicate our individual experiences.</h2>
+              <h2>Designed based off the award winning novel, Beloved by Toni Morrison.
+                Three book covers for three separate and distinct audiences. Designed to
+                maintain the original storyline and themes of the original
+                book that was published in 1987 inspired by a true story of an
+                African-American slave, Margaret Garner.</h2>
             </div>
 
             <div class="text">
-              <h1>Self & Place</h1>
-              <p>The purpose of this project is to use photographs to digitally
-                represent yourself based on your chosen topic. My concept for this
-                project is to show two contrasting photo that represents my
-                “private self”, the person not everyone sees and my “public self”,
-                what everyone else sees me like on social media (instagram).</p>
+              <h1>Beloved: 3-in-1 Book Covers</h1>
+              <h3>project description</h3>
+              <p>Redesign the cover of an existing book for three different audiences
+                and three distinct genres. The goal of this project is to explore
+                different design decisions associated with book genres and audiences
+                by developing concepts and typographic format for each of the book
+                cover. Deliverable should also include a one-page rationale including
+                original research.</p>
             </div>
 
             <div class="text">
-              <h3>Concept</h3>
-              <p>The first photo is my private self. I planned to take this picture
-                in a more quiet environment to represent mystery/privacy. I decided
-                to take this picture standing in between an aisle in a public
-                library while holding my laptop in front of me. By standing behind
-                the laptop screen it represents my true self, the real person behind
-                my social media self. I found an aisle with empty shelves on both
-                sides and thought it would be best to represent loneliness/privacy
-                since it’s empty. I also gave the photo a low saturation to bring
-                out the greys and blacks since those colours represents mystery and
-                security. The photo was shot with me standing in the middle. The
-                lines from the selves lead the eye towards the centre where I was
-                standing. It was also shot at eye point of view giving it more of
-                a reality feel. My private self isn’t perfect as it looks through
-                my social media its the reality, it isn’t as simple as it may seem
-                online. It’s all the good and the bad something not everyone gets
-                to see. No one would ever be able to tell who I really was just
-                looking at my online persona and I decided to represent this by
-                showing myself as the main subject behind a computer screen.
-              <br><br>
-  	             My contrasting photo, however, represents my social media self,
-                 which is only the good and fun aspects in my life. I portrayed
-                 this by going into a more urban/public setting. Since this photo
-                 only represents the fun stuff people see through my social media
-                 life, I decided to add wings to my back. The wings represent the
-                 online persona I’ve created for myself, it also makes it more of
-                 a imaginary not reality since everything portrayed on social
-                 media isn’t always as it seems. In the photo I’m positioned more
-                 towards the left with my head looking back. This photo was shot
-                 at a low point of view to make me seem more powerful and in
-                 control which is the power that social media lets a person have.
-                 I decided to removed the buildings behind me so it would seem
-                 like I was looking towards the empty white sky, something
-                 unknown/imaginary . The tones for this photo is light so I used
-                 the colours blue and white since they represent power, creation
-                 and simple.</p>
+              <h1>Design Rationale</h1>
+              <p>My main approach for the first cover was to target adults, mostly
+                African-Americans and older audiences who are interested in historical
+                literature. I graphically designed this cover to be simple, clean, and
+                aesthetically pleasing so readers can be proud and not afraid to show
+                off the book when reading it in public. The silhouette of the
+                African-American woman on the cover gives the audience a peak into
+                the novel, the hat helps set a sense of time/place while the rose
+                and blood gives a hint into the meaning behind “Beloved”. The serif
+                typeface chosen for the title was Benguiat Pro ITC to give the book
+                a high-end stylistic feel while maintaining the historical element
+                to the overall design. The title typeface was paired with a more
+                traditional serif to give balance to the overall composition of
+                the book.
+                <br><br>
+                My targeted audience for the second cover was graphically designed
+                for children under six years old. Keeping the main themes of the book,
+                I decided to design a ghost story. I drew an African-American kid
+                wearing a ghost costume standing in a hay field to represent a form
+                of farm life and give an element of slavery. My goal was to keep the
+                book more light and playful. I was able to achieve this by using a
+                spooky yet playful typeface combined with happy colour elements.
+                The colours red, pink, blue and yellow used in the three covers were
+                all selected because of its significants in the novel. Red was a
+                symbol of pain, evil and death, representing blood from the death of
+                the child. Pink is the last colour the mother remembers seeing on her
+                baby’s headstone, the colour was incorporated into the rose of the
+                first cover. Finally,blue and yellow were used to signify peace in
+                the novel.
+                <br><br>
+                My targeted audience for the final cover were teenagers and/or
+                high school readers. I based this design on the genre of magical
+                realism. My approach to this cover was inspired by the book series,
+                Twilight. I wanted it to be more imaged based, dark and stylish to
+                better fit into the theme of teenage novels. I chose an image of a
+                rose with chains to represent the significants of the female
+                characters and themes of slavery and freedom. The typeface I chose
+                for the title was Carilliantine Solid, since it gives character to
+                story but also a stylistic approach you often see a lot in similar
+                book genres. I used a serif typeface for the authors name to help
+                with type hierarchy and paired the two fonts with Avenir Next to keep
+                everything balance and legible.</p>
             </div>
 
             <div class="text">
-              <h3>Process</h3>
-              <h4>brainstorming</h4>
+              <h1>Process</h1>
+              <h3>brainstorming</h3>
 
               <div class="proj-imgprocess">
                 <div class="proj-imgbox">
@@ -134,7 +136,7 @@
             </div>
 
             <div class="text">
-              <h4>photo selection</h4>
+              <h3>photo selection</h3>
 
                 <div class="proj-imgprocess">
                   <div class="proj-imgbox">
@@ -186,8 +188,8 @@
           </div>
         </div>
 
-        <form action="proj-2.html">
-          <button class="button-product">Next Project: <b>Book Covers</b></button>
+        <form action="proj-1.html">
+          <button class="button-product">Previous Project: <b>Self & Place</b></button>
         </form>
 
       </div>
