--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
 
     <div class=section>
       <div class="proj-container">
-        <a href="proj-1.html"> <img src="img/proj-1.png" alt="Project 1 - Centre A" class="proj-display"> </a>
+        <a href="proj-1.html"> <img src="img/SelfPlace_1.png" alt="Project 1 - Centre A" class="proj-display"> </a>
         <div class="project-name">self and place</div>
         <div class="project-type">digital photography</div>
       </div>
